lagt till fler parametrar

--- a/starwars/starwars.html
+++ b/starwars/starwars.html
@@ -27,7 +27,10 @@
     </div>
     
     <div class="planets">
-        <p class="text"></p>
+        <p class="name"></p>
+        <p class="climate"></p>
+        <p class="terrain"></p>
+        <p class="population"></p>
     </div>
 </article>
 
